--- a/projects/index.html
+++ b/projects/index.html
@@ -46,3 +46,16 @@ name: projects
     </div>
   </div>
 </div>
+
+<h3>Non-code stuff</h3>
+
+<h4>Photography</h4>
+
+I'm certainly just a very amateur photographer, but I do really enjoy it. Some of my stuff is public in 
+<a href="https://plus.google.com/photos/112228900913862544865/albums">my Google+/Picasa albums</a>.
+
+
+<h2>Professional projects</h2>
+
+Rather than duplicate the info and links, please take a look at 
+<a href="/resume/">my résumé</a> for stuff about professional work.
