--- a/projects/index.html
+++ b/projects/index.html
@@ -4,8 +4,6 @@ title: Projects
 name: projects
 ---
 
-<script src="projects.js"></script>
-
 <h1>{{ page.title }}</h1>
 
 <h2>Personal projects</h2>
@@ -15,16 +13,22 @@ name: projects
 <div id="github-repos">
   Loading...
 
-  <div style="display: none;" class="repo-template repo">
-    <h4><a class="repo-link"><span class="repo-name"></span></a></h4>
-    <div class="repo-desc"></div>
-    <div>
-      <span class="repo-watchers-info">
-        <span class="repo-watchers"> </span>, <span class="repo-forks"> </span>.
-      </span>
-      <span class="repo-language"></span>
+  <script id="github-repo-template" type="text/template">
+    <div class="repo">
+      <h4><a href="<%= html_url %>"><%= name %></a></h4>
+      <div><%= description %></div>
+      <div>
+        <% if (watchers_count > 1 || forks_count > 1) { %>
+          <%= pluralize(watchers_count, 'star', 'stars') %>, 
+          <%= pluralize(forks_count, 'fork', 'forks') %>.
+        <% } %>
+        <% if (language) { %>
+          Written mostly in <%= language %>.
+        <% } %>
+      </div>
     </div>
-  </div>
+  </script>
+
 </div>
 
 
@@ -37,14 +41,21 @@ name: projects
 <div id="bitbucket-repos">
   Loading...
 
-  <div style="display: none;" id="repo-template" class="repo-template repo">
-    <h4><a class="repo-link"><span class="repo-name"></span></a></h4>
-    <div class="repo-desc"> </div>
-    <div>
-      <span class="repo-watchers-info"><span class="repo-watchers"></span>.</span>
-      Written mostly in <span class="repo-language"></span>.
+  <script id="bitbucket-repo-template" type="text/template">
+    <div class="repo">
+      <h4><a href="<%= 'https://bitbucket.org/'+owner+'/'+slug %>"><%= name %></a></h4>
+      <div><%= description %></div>
+      <div>
+        <% if (followers_count > 1) { %>
+          <%= pluralize(followers_count, 'follower', 'followers') + '. ' %>
+        <% } %>
+        <% if (language) { %>
+          Written mostly in <%= language %>.
+        <% } %>
+      </div>
     </div>
-  </div>
+  </script>
+
 </div>
 
 <h3>Non-code stuff</h3>
@@ -59,3 +70,5 @@ I'm certainly just a very amateur photographer, but I do really enjoy it. Some o
 
 Rather than duplicate the info and links, please take a look at 
 <a href="/resume/">my résumé</a> for stuff about professional work.
+
+<script src="projects.js"></script>
