Added gists to the projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -32,6 +32,21 @@ name: projects
 </div>
 
 
+<h3>Github gists</h3>
+
+<div id="github-gists">
+  Loading...
+
+  <script id="github-gist-template" type="text/template">
+    <div class="repo">
+      <h4><a href="<%= html_url %>">Gist <%= id %></a></h4>
+      <div><%= description %></div>
+    </div>
+  </script>
+
+</div>
+
+
 <h3>Bitbucket projects</h3>
 
 <p>
