Removed background texture -- it was hindering readability. Also fixed a broken link.

--- a/projects/index.html
+++ b/projects/index.html
@@ -84,6 +84,6 @@ I'm certainly just a very amateur photographer, but I do really enjoy it. Some o
 <h2>Professional projects</h2>
 
 Rather than duplicate the info and links, please take a look at
-<a href="/resume/">my résumé</a> for stuff about professional work.
+<a href="/cv/">my résumé</a> for stuff about professional work.
 
 <script src="projects.js"></script>
