Added Design In/Coherence sub-blog

--- a/inco/index.html
+++ b/inco/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: Blog
-name: blog
+title: Design In/Coherence
+name: inco
 ---
 
 <div class="row-fluid">
@@ -10,10 +10,9 @@ name: blog
   </div>
 </div>
 
-<h1>Blog Posts</h1>
+<h1>Design In/Coherence Posts</h1>
 
-
-{% for post in site.categories.blog %}
+{% for post in site.categories.inco %}
   {% if post.published %}
     <hr>
     <div class="row-fluid">
