--- a/inco/index.html
+++ b/inco/index.html
@@ -6,7 +6,7 @@ name: inco
 
 <div class="row-fluid">
   <div class="span12 text-right">
-    <a href="http://feeds.feedburner.com/adam-p-blog">RSS/Atom</a>
+    <a href="https://feeds.feedburner.com/DesignInCoherence">RSS/Atom</a>
   </div>
 </div>
 
