Add raw Atom feed link

--- a/inco/index.html
+++ b/inco/index.html
@@ -6,7 +6,8 @@ name: inco
 
 <div class="row-fluid">
   <div class="span12 text-right">
-    <a href="https://feeds.feedburner.com/DesignInCoherence">RSS/Atom</a>
+    <a href="https://feeds.feedburner.com/DesignInCoherence">Subscribe</a>
+    (<a href="feed.xml">RSS/Atom</a>)
   </div>
 </div>
 
