Update lots of links and URLs to HTTPS

--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <!--[if lt IE 7]>
-    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
+    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> or <a href="https://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
   <![endif]-->
 
   <div class="container-fluid">
@@ -51,10 +51,10 @@
           To escape from this busted place, either <a href="javascript:history.back()">go back to the page you were just on</a>, or go to start of...
         </p>
         <p>
-          the <a href="http://www.markdown-here.com">Markdown Here site</a>
+          the <a href="https://www.markdown-here.com">Markdown Here site</a>
         </p>
         <p>
-          or <a href="http://www.crypti.cc">my personal site (crypti.cc)</a>
+          or <a href="https://www.crypti.cc">my personal site (crypti.cc)</a>
         </p>
       </div>
     </div>
