--- a/404.html
+++ b/404.html
@@ -27,8 +27,7 @@
 
   <script src="/assets/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
   <!--[if lt IE 7]>
