deploy: 7d38b786d96324fbb08f8bedda02e5071079a815

--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@
 <link rel=alternate type=application/rss+xml href=../projects/index.xml title="Projects | adam-p">
 <meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
 <link rel=icon type=image/png href=../favicon.png>
-<link rel=stylesheet href=../scss/styles.4e3e257e605f6f4355c5579e847046430c49183da4192a7e74b7cb8bd6e3003809c70fb48742f364c9a52e7a842026e67fef73f24055959dbcd9b86f762c14c8.css integrity="sha512-Tj4lfmBfb0NVxVeehHBGQwxJGD2kGSp+dLfLi9bjADgJxw+0h0LzZMmlLnqEICbmf+9z8kBVlZ282bhvdiwUyA==">
+<link rel=stylesheet href=../scss/styles.css>
 <title>Projects | adam-p</title>
 </head>
 <body>
@@ -93,11 +93,11 @@ Loading...
 <h2>Professional projects</h2>
 Rather than duplicate the info and links, please take a look at
 <a href=../cv/>my résumé</a> for stuff about professional work.
-<script src=../js/projects.06e7015fe459bc47a8a8312bc206050c3c907d67b4fc8cd5aaca44f19f8a19ae209e45d8d29432ee82327ee3e74c919ff6dae92dd0ab0826d1f13abeeb9cbf9e.js integrity="sha512-BucBX+RZvEeoqDErwgYFDDyQfWe0/IzVqspE8Z+KGa4gnkXY0pQy7oIyfuPnTJGf9trpLdCrCCbR8Tq+65y/ng=="></script>
+<script src=../js/projects.js></script>
 <footer class=text-end>
 <small>© 2022 Adam Pritchard</small>
 </footer>
 </div>
-<script src=../node_modules/bootstrap/dist/js/bootstrap.ff5877e383a0bb7f5fda5325db22099f798f8f24ae074fa6dc4cc3bc5496971a3a1da24eff78ddcc63b2f15e9981d91391d74a1fe65699ad66a8e4191e68e8d7.js integrity="sha512-/1h344Ogu39f2lMl2yIJn3mPjySuB0+m3EzDvFSWlxo6HaJO/3jdzGOy8V6ZgdkTkddKH+ZWma1mqOQZHmjo1w=="></script>
+<script src=../node_modules/bootstrap/dist/js/bootstrap.js></script>
 </body>
 </html>
