--- a/cv/index.html
+++ b/cv/index.html
@@ -2,11 +2,8 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-<link rel=alternate type=application/rss+xml href=../cv/index.xml title="CV | adam-p">
-<meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
-<link rel=icon type=image/png href=../favicon.png>
-<link rel=stylesheet href=../scss/styles.css>
+<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1"><link rel=alternate type=application/rss+xml href=../cv/index.xml title="CV | adam-p"><meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
+<link rel=icon type=image/png href=../favicon.png><link rel=stylesheet href=../scss/styles.css>
 <title>CV | adam-p</title>
 </head>
 <body>
