--- a/404.html
+++ b/404.html
@@ -3,9 +3,7 @@
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
 <meta http-equiv=x-ua-compatible content="IE=edge,chrome=1">
-&lt;-- This 404 page may be shown at any URL depth, so purely relative URLs won't work
-without this help. Note that this breaks our otherwise diligent use of relative URLs. -->
-<base href=./>
+<base href=https://adam-p.ca/>
 <meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
 <link rel=icon type=image/png href=./favicon.png><link rel=stylesheet href=./scss/styles.css>
 <title>404 Page not found | adam-p</title>
