--- a/inco/index.html
+++ b/inco/index.html
@@ -46,7 +46,7 @@ adam-p
 <div class=row-fluid>
 <div class="span12 post-excerpt">
 <div class=post-specs>
-<h4><a href=../inco/2021-11-27-ftnu/>Instructions on the ceiling</a></h4>
+<h4><a href=../inco/2021/11/ftnu/>Instructions on the ceiling</a></h4>
 <div>
 2021-11-27
 </div>
@@ -55,7 +55,7 @@ adam-p
 From the Neck Up does neck-up massage, including intra-oral. When the RMT has their fingers in your mouth it&rsquo;s pretty hard to give directions. So there are hand signs for communicating with the RMT. And, since you&rsquo;re laying on your back during the procedure, the guide to the signs are posted on the ceiling.
 </div>
 <div class="overflow-fade text-end">
-<h1><a href=../inco/2021-11-27-ftnu/>>>></a></h1>
+<h1><a href=../inco/2021/11/ftnu/>>>></a></h1>
 </div>
 </div>
 </div>
@@ -65,7 +65,7 @@ From the Neck Up does neck-up massage, including intra-oral. When the RMT has th
 <div class=row-fluid>
 <div class="span12 post-excerpt">
 <div class=post-specs>
-<h4><a href=../inco/2017-01-05-first-post/>First Post: someone's last post</a></h4>
+<h4><a href=../inco/2017/01/first-post/>First Post: someone's last post</a></h4>
 <div>
 2017-01-05
 </div>
@@ -76,7 +76,7 @@ To start, a curious headstone.
 The goal of the design of a headstone is to be read by the living. For a few decades some of the people who read it will have known the deceased, but many won&rsquo;t, and after a while no one will have personally known them.
 </div>
 <div class="overflow-fade text-end">
-<h1><a href=../inco/2017-01-05-first-post/>>>></a></h1>
+<h1><a href=../inco/2017/01/first-post/>>>></a></h1>
 </div>
 </div>
 </div>
