deploy: 07b14c8c898862a1c5ed18ff7a1c816faeb4e61c

--- a/cv/index.html
+++ b/cv/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1"><link rel=alternate type=application/rss+xml href=../cv/index.xml title="CV | adam-p"><meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
+<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1"><link rel=alternate type=application/rss+xml href=../cv/feed.xml title="CV | adam-p"><meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
 <link rel=icon type=image/png href=../favicon.png><link rel=stylesheet href=../scss/styles.css>
 <title>CV | adam-p</title>
 </head>
@@ -38,7 +38,7 @@ adam-p
 <div>
 <header>
 <h1 class=title>CV</h1>
-<a href=../cv/index.xml><i class="bi-rss-fill float-end"></i></a>
+<a href=../cv/feed.xml><i class="bi-rss-fill float-end"></i></a>
 </header>
 <p>My work experience and education that I do a poor job of keeping up-to-date.</p>
 <p>You&rsquo;ll probably want to start with my <img src=../icon/octicons/mark-github.svg#icon alt><a href=https://github.com/adam-p title="link title">GitHub</a> profile. But please note that a lot of what I do isn&rsquo;t in public repos.</p>
