--- a/inco/index.html
+++ b/inco/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1"><link rel=alternate type=application/rss+xml href=../inco/index.xml title="In/Coherent Design | adam-p"><meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
+<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1"><link rel=alternate type=application/rss+xml href=../inco/feed.xml title="In/Coherent Design | adam-p"><meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
 <link rel=icon type=image/png href=../favicon.png><link rel=stylesheet href=../scss/styles.css>
 <title>In/Coherent Design | adam-p</title>
 </head>
@@ -38,7 +38,7 @@ adam-p
 <div>
 <header>
 <h1 class=title>In/Coherent Design</h1>
-<a href=../inco/index.xml><i class="bi-rss-fill float-end"></i></a>
+<a href=../inco/feed.xml><i class="bi-rss-fill float-end"></i></a>
 </header>
 <p>Every now and then I come across things &ndash; or the designs of things &ndash; that I particularly like or dislike. This is where I (intend to) record such things.</p>
 </div>
