--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <meta name=generator content="Hugo 0.92.2">
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1"><link rel=alternate type=application/rss+xml href=./index.xml title="Adam Pritchard's blog and miscellany"><meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
+<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1"><link rel=alternate type=application/rss+xml href=./feed.xml title="Adam Pritchard's blog and miscellany"><meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
 <link rel=icon type=image/png href=./favicon.png><link rel=stylesheet href=./scss/styles.css>
 <title>Adam Pritchard's blog and miscellany</title>
 </head>
