--- a/404.html
+++ b/404.html
@@ -6,9 +6,7 @@
 <base href=https://adam-p.ca/>
 <meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
 <link rel=icon type=image/png href=./favicon.png><link rel=stylesheet href=./scss/styles.css>
-<title>404 Page not found | adam-p</title>
-</head>
-<body>
+<title>404 Page not found | adam-p</title></head><body>
 <nav class="navbar navbar-expand-md navbar-light bg-light">
 <div class=container-fluid>
 <a class=navbar-brand href=./>
@@ -21,26 +19,14 @@ adam-p
 <ul class=navbar-nav>
 <li class=nav-item>
 <a class=nav-link href=./blog/>Blog</a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=./inco/>In/Co</a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=./projects/>Projects</a>
-</li>
-<li class=nav-item>
+</li><li class=nav-item>
 <a class=nav-link href=./cv/>CV</a>
-</li>
-</ul>
-</div>
-</div>
-</nav>
-<div class=container-fluid>
-<h1 class=title>404 OH NO</h1>
-<p>
+</li></ul></div></div></nav><div class=container-fluid>
+<h1 class=title>404 OH NO</h1><p>
 Please <a href=./about>let me know</a> if something is broken that shouldn't be.
-</p>
-</div>
-<script src=./node_modules/bootstrap/dist/js/bootstrap.js></script>
-</body>
-</html>
+</p></div><script src=./node_modules/bootstrap/dist/js/bootstrap.js></script>
+</body></html>
