--- a/inco/index.html
+++ b/inco/index.html
@@ -1,56 +1,5 @@
-<!doctype html><html lang=en>
-<head>
-<meta charset=utf-8>
-<meta name=viewport content="width=device-width,initial-scale=1">
-<meta http-equiv=x-ua-compatible content="IE=edge,chrome=1"><link rel=alternate type=application/rss+xml href=../inco/feed.xml title="In/Coherent Design | adam-p"><meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho">
-<link rel=icon type=image/png href=../favicon.png><link rel=stylesheet href=../scss/styles.css>
-<title>In/Coherent Design | adam-p</title></head><body>
-<nav class="navbar navbar-expand-md navbar-light bg-light">
-<div class=container-fluid>
-<a class=navbar-brand href=../>
-adam-p
-</a>
+<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=x-ua-compatible content="IE=edge,chrome=1"><link rel=alternate type=application/rss+xml href=../inco/feed.xml title="In/Coherent Design | adam-p"><meta name=google-site-verification content="WxZdzPANRFpehqogDMcTc9HLGXXDJy5If07MuUZvHho"><link rel=icon type=image/png href=../favicon.png><link rel=stylesheet href=../scss/styles.css><title>In/Coherent Design | adam-p</title></head><body><nav class="navbar navbar-expand-md navbar-light bg-light"><div class=container-fluid><a class=navbar-brand href=../>adam-p</a>
 <button class=navbar-toggler type=button data-bs-toggle=collapse data-bs-target=#navbarNav aria-controls=navbarNav aria-expanded=false aria-label="Toggle navigation">
-<span class=navbar-toggler-icon></span>
-</button>
-<div class="collapse navbar-collapse" id=navbarNav>
-<ul class=navbar-nav>
-<li class=nav-item>
-<a class=nav-link href=../blog/>Blog</a>
-</li><li class=nav-item>
-<a class="nav-link active" href=../inco/>In/Co</a>
-</li><li class=nav-item>
-<a class=nav-link href=../projects/>Projects</a>
-</li><li class=nav-item>
-<a class=nav-link href=../cv/>CV</a>
-</li></ul></div></div></nav><div class=container-fluid>
-<main>
-<div>
-<header>
-<h1 class=title>In/Coherent Design</h1><a href=../inco/feed.xml><i class="bi-rss-fill float-end"></i></a>
-</header><p>Every now and then I come across things &ndash; or the designs of things &ndash; that I particularly like or dislike. This is where I (intend to) record such things.</p></div><hr>
-<div class=row-fluid>
-<div class="span12 post-excerpt">
-<div class=post-specs>
-<h4><a href=../inco/2021/11/ftnu/>Instructions on the ceiling</a></h4><div>
-2021-11-27
-</div><div class=post-body>
-<div>
-From the Neck Up does neck-up massage, including intra-oral. When the RMT has their fingers in your mouth it&rsquo;s pretty hard to give directions. So there are hand signs for communicating with the RMT. And, since you&rsquo;re laying on your back during the procedure, the guide to the signs are posted on the ceiling.
-</div><div class="overflow-fade text-end">
-<h1><a href=../inco/2021/11/ftnu/>>>></a></h1></div></div></div></div></div><hr>
-<div class=row-fluid>
-<div class="span12 post-excerpt">
-<div class=post-specs>
-<h4><a href=../inco/2017/01/first-post/>First Post: someone's last post</a></h4><div>
-2017-01-05
-</div><div class=post-body>
-<div>
-I often come across digital and physical interface designs that are either great (coherent) or terrible (incoherent). For some mysterious reason I&rsquo;ve been wanting to capture such interfaces and share them.
+<span class=navbar-toggler-icon></span></button><div class="collapse navbar-collapse" id=navbarNav><ul class=navbar-nav><li class=nav-item><a class=nav-link href=../blog/>Blog</a></li><li class=nav-item><a class="nav-link active" href=../inco/>In/Co</a></li><li class=nav-item><a class=nav-link href=../projects/>Projects</a></li><li class=nav-item><a class=nav-link href=../cv/>CV</a></li></ul></div></div></nav><div class=container-fluid><main><div><header><h1 class=title>In/Coherent Design</h1><a href=../inco/feed.xml><i class="bi-rss-fill float-end"></i></a></header><p>Every now and then I come across things &ndash; or the designs of things &ndash; that I particularly like or dislike. This is where I (intend to) record such things.</p></div><hr><div class=row-fluid><div class="span12 post-excerpt"><div class=post-specs><h4><a href=../inco/2021/11/ftnu/>Instructions on the ceiling</a></h4><div>2021-11-27</div><div class=post-body><div>From the Neck Up does neck-up massage, including intra-oral. When the RMT has their fingers in your mouth it&rsquo;s pretty hard to give directions. So there are hand signs for communicating with the RMT. And, since you&rsquo;re laying on your back during the procedure, the guide to the signs are posted on the ceiling.</div><div class="overflow-fade text-end"><h1><a href=../inco/2021/11/ftnu/>>>></a></h1></div></div></div></div></div><hr><div class=row-fluid><div class="span12 post-excerpt"><div class=post-specs><h4><a href=../inco/2017/01/first-post/>First Post: someone's last post</a></h4><div>2017-01-05</div><div class=post-body><div>I often come across digital and physical interface designs that are either great (coherent) or terrible (incoherent). For some mysterious reason I&rsquo;ve been wanting to capture such interfaces and share them.
 To start, a curious headstone.
-The goal of the design of a headstone is to be read by the living. For a few decades some of the people who read it will have known the deceased, but many won&rsquo;t, and after a while no one will have personally known them.
-</div><div class="overflow-fade text-end">
-<h1><a href=../inco/2017/01/first-post/>>>></a></h1></div></div></div></div></div></main><footer class=text-end>
-<small>© 2022 Adam Pritchard</small>
-</footer></div><script src=../node_modules/bootstrap/dist/js/bootstrap.js></script>
-</body></html>
+The goal of the design of a headstone is to be read by the living. For a few decades some of the people who read it will have known the deceased, but many won&rsquo;t, and after a while no one will have personally known them.</div><div class="overflow-fade text-end"><h1><a href=../inco/2017/01/first-post/>>>></a></h1></div></div></div></div></div></main><footer class=text-end><small>© 2022 Adam Pritchard</small></footer></div><script src=../node_modules/bootstrap/dist/js/bootstrap.js></script></body></html>
